# CameraQ

./: .gitignore  GEMINI.md  README.md  data-model.md  main.py  plan.md  profile_aesthetics.py  pyproject.toml  quickstart.md  ref1.md  research.md  spec.md  test_rect.py
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
contracts/: api.md
specs/001-realtime-saliency-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-aesthetics-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-generative-ai-guide/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ui-ux-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-analysis-toggles-sidebar/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/006-pro-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-deep-ai-assist/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-ai-ux-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-scenario-templates/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-video-assistant/: spec.md
specs/011-shutter-and-ux-levels/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
(+62 files in other folders)
