[project]
name = "cameraq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "gradio>=6.19.0",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "pytest>=9.1.1",
    "ultralytics>=8.4.78",
]
